# llm-inference-toolkit

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  website.md
.github/workflows/: ci.yml
examples/: demo_cache.py  demo_chatbot.py  demo_compression.py
examples/output/: demo_compression_output.txt
src/inference_toolkit/: __init__.py  config.py
src/inference_toolkit/api/: __init__.py  main.py  models.py  routes.py
src/inference_toolkit/cache/: __init__.py  analytics.py  semantic_cache.py  store.py
src/inference_toolkit/compression/: __init__.py  compressor.py
src/inference_toolkit/conversation/: __init__.py  manager.py
tests/: conftest.py  test_analytics.py  test_cache.py  test_compressor.py  test_conversation.py
